sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: not found: value length
		length :Int ; getNombreValeurs();
                ^AlgBubbleSort1:9: error: not found: value length
		for(i<-0 to length-2){
                            ^